k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oj-api
  labels:
    app: oj-api
    environment: production
