k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oj-api-server
  namespace: oj-api
  labels:
    app: oj-api-server
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: oj-api-server
